--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -22,14 +22,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fgk-ao-LLy">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landscapeExample" translatesAutoresizingMaskIntoConstraints="NO" id="fgk-ao-LLy">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         </imageView>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O1w-bz-WIf" userLabel="top text field">
                                             <rect key="frame" x="8" y="8" width="84" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="9mP-re-du2"/>
-                                                <constraint firstAttribute="width" constant="84" id="cAx-hV-gQN"/>
+                                                <constraint firstAttribute="width" constant="84" id="3Vp-f4-LYv"/>
+                                                <constraint firstAttribute="height" constant="30" id="nNO-TR-H9g"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
@@ -47,19 +47,19 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="fgk-ao-LLy" firstAttribute="leading" secondItem="ccf-15-RxI" secondAttribute="leading" id="4tK-47-cak"/>
-                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="trailing" secondItem="ccf-15-RxI" secondAttribute="trailingMargin" id="7Xb-UJ-1Hu"/>
-                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="leading" secondItem="fgk-ao-LLy" secondAttribute="trailing" constant="8" symbolic="YES" id="8ZH-V4-cGb"/>
-                                        <constraint firstItem="EMn-SG-ahh" firstAttribute="bottom" secondItem="ccf-15-RxI" secondAttribute="bottomMargin" id="GDe-js-wYd"/>
-                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="centerY" secondItem="ccf-15-RxI" secondAttribute="centerY" id="MM7-BA-bLg"/>
-                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="centerY" secondItem="fgk-ao-LLy" secondAttribute="centerY" id="QyI-aX-bit"/>
-                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="centerX" secondItem="fgk-ao-LLy" secondAttribute="centerX" id="SUQ-Dl-8l8"/>
-                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="top" secondItem="ccf-15-RxI" secondAttribute="topMargin" id="XPk-wN-9kH"/>
-                                        <constraint firstItem="EMn-SG-ahh" firstAttribute="top" secondItem="O1w-bz-WIf" secondAttribute="bottom" constant="23" id="atl-xa-2aD"/>
-                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="leading" secondItem="EMn-SG-ahh" secondAttribute="leading" id="fCl-rd-Zpc"/>
-                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="leading" secondItem="ccf-15-RxI" secondAttribute="leadingMargin" id="frg-W4-nbe"/>
-                                        <constraint firstItem="EMn-SG-ahh" firstAttribute="trailing" secondItem="O1w-bz-WIf" secondAttribute="trailing" id="hgI-NL-yME"/>
-                                        <constraint firstItem="fgk-ao-LLy" firstAttribute="top" secondItem="ccf-15-RxI" secondAttribute="top" id="kVd-r6-9Bv"/>
+                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="leading" secondItem="fgk-ao-LLy" secondAttribute="trailing" constant="8" symbolic="YES" id="51J-3a-QPH"/>
+                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="centerY" secondItem="ccf-15-RxI" secondAttribute="centerY" id="6Cd-Vl-od5"/>
+                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="leading" secondItem="ccf-15-RxI" secondAttribute="leadingMargin" id="9wX-ga-1sy"/>
+                                        <constraint firstItem="fgk-ao-LLy" firstAttribute="centerX" secondItem="EMn-SG-ahh" secondAttribute="centerX" id="KZ5-yB-3qt"/>
+                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="leading" secondItem="EMn-SG-ahh" secondAttribute="leading" id="RrR-ba-8ob"/>
+                                        <constraint firstItem="EMn-SG-ahh" firstAttribute="top" secondItem="O1w-bz-WIf" secondAttribute="bottom" constant="23" id="da3-73-0cP"/>
+                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="trailing" secondItem="ccf-15-RxI" secondAttribute="trailingMargin" id="daF-KU-aKw"/>
+                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="top" secondItem="ccf-15-RxI" secondAttribute="topMargin" id="dub-Ky-tVW"/>
+                                        <constraint firstItem="fgk-ao-LLy" firstAttribute="top" secondItem="ccf-15-RxI" secondAttribute="top" id="k7t-Ki-rkj"/>
+                                        <constraint firstItem="fgk-ao-LLy" firstAttribute="leading" secondItem="ccf-15-RxI" secondAttribute="leading" id="ufn-ep-Qhc"/>
+                                        <constraint firstItem="EMn-SG-ahh" firstAttribute="bottom" secondItem="ccf-15-RxI" secondAttribute="bottomMargin" id="w45-de-5S1"/>
+                                        <constraint firstItem="5X5-8l-gcs" firstAttribute="centerY" secondItem="fgk-ao-LLy" secondAttribute="centerY" id="weB-Vy-JTh"/>
+                                        <constraint firstItem="O1w-bz-WIf" firstAttribute="trailing" secondItem="EMn-SG-ahh" secondAttribute="trailing" id="zbb-bu-Msm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -99,9 +99,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wyT-wh-l3x">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wyT-wh-l3x">
                                 <rect key="frame" x="-4" y="44" width="328" height="524"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lMZ-Aq-dTa">
                                 <rect key="frame" x="-4" y="0.0" width="328" height="44"/>
@@ -116,7 +116,7 @@
                                 </items>
                             </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.2196078431372549" green="0.31764705882352939" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="lMZ-Aq-dTa" firstAttribute="leading" secondItem="wyT-wh-l3x" secondAttribute="leading" id="GYP-eo-rxq"/>
                             <constraint firstItem="wyT-wh-l3x" firstAttribute="top" secondItem="lMZ-Aq-dTa" secondAttribute="bottom" id="JBu-OS-vzr"/>
@@ -157,7 +157,7 @@
         <scene sceneID="gr4-Si-WWa">
             <objects>
                 <collectionViewController id="cdy-t3-2Af" userLabel="Collection for Sent Memes" customClass="SentMemesCollectionViewController" customModule="MM1_1PickingAnImage" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Jdb-4E-2s5">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" id="Jdb-4E-2s5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1TQ-hM-Nye">
@@ -174,40 +174,42 @@
                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aXS-6M-aGg">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landscapeExample" translatesAutoresizingMaskIntoConstraints="NO" id="aXS-6M-aGg">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bN8-dZ-Nuq" userLabel="topLabel">
-                                            <rect key="frame" x="8" y="8" width="84" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alZ-f1-Bqy" userLabel="bottomLabel">
-                                            <rect key="frame" x="8" y="71" width="84" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0IW-5T-vvU">
+                                            <rect key="frame" x="8" y="8" width="84" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="gYq-he-WCa"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o2b-vj-mF8">
+                                            <rect key="frame" x="8" y="62" width="84" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="alZ-f1-Bqy" firstAttribute="leading" secondItem="AYf-yu-PPf" secondAttribute="leadingMargin" id="6dg-Ai-7gU"/>
-                                    <constraint firstAttribute="bottom" secondItem="aXS-6M-aGg" secondAttribute="bottom" id="DsB-S4-HhC"/>
-                                    <constraint firstItem="alZ-f1-Bqy" firstAttribute="trailing" secondItem="bN8-dZ-Nuq" secondAttribute="trailing" id="Giv-e9-YZ2"/>
-                                    <constraint firstItem="aXS-6M-aGg" firstAttribute="top" secondItem="AYf-yu-PPf" secondAttribute="top" id="I1S-I6-MQs"/>
-                                    <constraint firstItem="alZ-f1-Bqy" firstAttribute="bottom" secondItem="AYf-yu-PPf" secondAttribute="bottomMargin" id="bSS-gc-w4x"/>
-                                    <constraint firstItem="bN8-dZ-Nuq" firstAttribute="top" secondItem="AYf-yu-PPf" secondAttribute="topMargin" id="dCv-Sq-Hi5"/>
-                                    <constraint firstItem="alZ-f1-Bqy" firstAttribute="leading" secondItem="bN8-dZ-Nuq" secondAttribute="leading" id="eBK-jy-0fc"/>
-                                    <constraint firstItem="aXS-6M-aGg" firstAttribute="leading" secondItem="AYf-yu-PPf" secondAttribute="leading" id="ewN-nm-jwQ"/>
-                                    <constraint firstAttribute="trailing" secondItem="aXS-6M-aGg" secondAttribute="trailing" id="rkL-dT-HAn"/>
-                                    <constraint firstItem="alZ-f1-Bqy" firstAttribute="centerX" secondItem="aXS-6M-aGg" secondAttribute="centerX" id="xxg-vI-nG1"/>
+                                    <constraint firstItem="0IW-5T-vvU" firstAttribute="leading" secondItem="o2b-vj-mF8" secondAttribute="leading" id="3td-de-TW9"/>
+                                    <constraint firstItem="0IW-5T-vvU" firstAttribute="leading" secondItem="AYf-yu-PPf" secondAttribute="leadingMargin" id="6am-E6-4Ur"/>
+                                    <constraint firstItem="o2b-vj-mF8" firstAttribute="top" secondItem="0IW-5T-vvU" secondAttribute="bottom" constant="24" id="Ot6-cw-F0x"/>
+                                    <constraint firstItem="aXS-6M-aGg" firstAttribute="leading" secondItem="AYf-yu-PPf" secondAttribute="leading" id="S6c-8V-GC1"/>
+                                    <constraint firstAttribute="trailing" secondItem="aXS-6M-aGg" secondAttribute="trailing" id="Yza-rk-3Sl"/>
+                                    <constraint firstAttribute="bottom" secondItem="aXS-6M-aGg" secondAttribute="bottom" id="erL-Gp-3LV"/>
+                                    <constraint firstItem="o2b-vj-mF8" firstAttribute="bottom" secondItem="AYf-yu-PPf" secondAttribute="bottomMargin" id="l4u-Hz-a44"/>
+                                    <constraint firstItem="aXS-6M-aGg" firstAttribute="centerX" secondItem="o2b-vj-mF8" secondAttribute="centerX" id="lVA-pi-g28"/>
+                                    <constraint firstItem="o2b-vj-mF8" firstAttribute="trailing" secondItem="0IW-5T-vvU" secondAttribute="trailing" id="mC1-10-zYR"/>
+                                    <constraint firstItem="aXS-6M-aGg" firstAttribute="top" secondItem="AYf-yu-PPf" secondAttribute="top" id="sK6-04-0xv"/>
+                                    <constraint firstItem="0IW-5T-vvU" firstAttribute="top" secondItem="AYf-yu-PPf" secondAttribute="topMargin" id="sol-YG-O9B"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="bottomLabel" destination="alZ-f1-Bqy" id="Gjq-Cp-9sl"/>
+                                    <outlet property="bottomTextField" destination="o2b-vj-mF8" id="MrU-wt-kfA"/>
                                     <outlet property="memeImage" destination="aXS-6M-aGg" id="iW8-c7-ysf"/>
-                                    <outlet property="topLabel" destination="bN8-dZ-Nuq" id="Bz8-4e-bPY"/>
+                                    <outlet property="topTextField" destination="0IW-5T-vvU" id="pon-HV-1oT"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -366,6 +368,7 @@
     </scenes>
     <resources>
         <image name="collection" width="30" height="30"/>
+        <image name="landscapeExample" width="856" height="1080"/>
         <image name="table" width="30" height="30"/>
     </resources>
 </document>
